# lostcpp

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  COPYING  README.md
.github/workflows/: cmake.yml
cmake/: ODE.cmake  assimp.cmake  embed.cmake  flags.cmake  glfw.cmake  glm.cmake  libraries.cmake  stduuid.cmake  uuid_v4.cmake
res/: cube.fbx  cube.gltf  myfile.txt
res/shaders/: box.frag  box.vert  gui_texture.vert  main_fbo.frag  main_fbo.vert  texture.vert  texture3d.vert  triangle.frag  triangle.vert  ui_image.frag
src/: Constructor.hpp  Embed.hpp  FixedString.hpp  GL.cpp  GL.hpp  Game.cpp  Game.hpp  Glad.hpp  Integers.hpp  Keycodes.hpp  Loader.hpp  Main.cpp  Meta.hpp  Pimpl.hpp  Shader.cpp  Shader.hpp  StdAfx.hpp  Texture.cpp  Texture.hpp  Time.hpp  Triangle.cpp  Triangle.hpp  UUID.hpp  Updater.cpp  Updater.hpp  Window.cpp  Window.hpp  comptimestr.hpp  embed.hpp  main.cpp  stdafx.hpp  testfile.hpp  uuid.hpp
src/Embed/: Embed.hpp
src/World/: Camera.cpp  Camera.hpp  Component.hpp  ComponentList.hpp  Entity.cpp  Entity.hpp  ExampleWorld.cpp  ExampleWorld.hpp  Transform.cpp  Transform.hpp  Triangle.hpp  World.cpp  World.hpp
src/World/Component/: Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  ComponentList.hpp  Gui.cpp  Gui.hpp  Physics.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  Transform.cpp  Transform.hpp  Transform2D.cpp  Transform2D.hpp  Triangle.cpp  Triangle.hpp
src/World/Components/: Physics.hpp  Transform.cpp  Transform.hpp
src/World/Entity/: Entity.hpp  Sgf4.hpp  Triangle.cpp  Triangle.hpp
src/components/: cube.cpp  cube.hpp  triangle.cpp  triangle.hpp
src/worlds/: ExampleModel.hpp  ExampleWorld.cpp  ExampleWorld.hpp  example.cpp  example.hpp
tools/: embed.py
trash/Entity/: Sgf4.hpp  Triangle.cpp  Triangle.hpp
